// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Account /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bcXHqe kEjsPc page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-dIfARi elmklC"
    >
      <div
        class="sc-hHTYSt fkOjYj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-dIfARi kJIWrK"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hHTYSt fkOjYj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-dIfARi kJIWrK"
    >
      <div
        class="sc-hHTYSt fkOjYj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fpnFmI accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 2`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fpnFmI accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutError 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fpnFmI accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutResult 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fpnFmI accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with loggingOut=true 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fpnFmI accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-fLcnxK gHDUPd outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-iveFHk cZBjGV"
        >
          Logout
        </span>
        <div
          aria-hidden="true"
          class="sc-cwSeag dKJPZK"
        >
          <div
            class="sc-dmctIk gpgmDt"
          >
            <div
              class="sc-kgTSHT fVZljd"
            />
            <div
              class="sc-kgTSHT igzXGN"
            />
            <div
              class="sc-kgTSHT jFLPMq"
            />
            <div
              class="sc-kgTSHT kszPRb"
            />
            <div
              class="sc-kgTSHT khVITU"
            />
            <div
              class="sc-kgTSHT jmeaJd"
            />
            <div
              class="sc-kgTSHT gRVbht"
            />
            <div
              class="sc-kgTSHT jJtlWl"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with no user 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bcXHqe kEjsPc page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-dIfARi elmklC"
    >
      <div
        class="sc-hHTYSt fkOjYj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-dIfARi kJIWrK"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hHTYSt fkOjYj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-dIfARi kJIWrK"
    >
      <div
        class="sc-hHTYSt fkOjYj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailError 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fpnFmI accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailResult 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fpnFmI accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestingVerificationEmail=true 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK fNAPsQ accountstyles__StyledButton-sc-b7dzct-1 jYUAJe"
        disabled=""
        type="button"
      >
        <span
          class="sc-iveFHk cZBjGV"
        >
          Get a new verification email
        </span>
        <div
          aria-hidden="true"
          class="sc-cwSeag dKJPZK"
        >
          <div
            class="sc-dmctIk gpgmDt"
          >
            <div
              class="sc-kgTSHT fVZljd"
            />
            <div
              class="sc-kgTSHT igzXGN"
            />
            <div
              class="sc-kgTSHT jFLPMq"
            />
            <div
              class="sc-kgTSHT kszPRb"
            />
            <div
              class="sc-kgTSHT khVITU"
            />
            <div
              class="sc-kgTSHT jmeaJd"
            />
            <div
              class="sc-kgTSHT gRVbht"
            />
            <div
              class="sc-kgTSHT jJtlWl"
            />
          </div>
        </div>
      </button>
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with user with emailVerified=true 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-jSUZER bliipu sc-kDvujY jlGjEY"
      >
        Account
      </h1>
    </div>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 bqtbAJ"
    >
      <button
        class="sc-fLcnxK djzLON outer"
        type="button"
      >
        <span
          class="sc-iveFHk cWnaKy"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;
